--- a/package.json
+++ b/package.json
@@ -8,20 +8,49 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.6",
+    "@prisma/client": "^5.9.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tiptap/pm": "^2.2.2",
+    "@tiptap/react": "^2.2.2",
+    "@tiptap/starter-kit": "^2.2.2",
+    "@uploadthing/react": "^6.2.2",
+    "ai": "^2.2.34",
+    "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
+    "lucide-react": "^0.323.0",
+    "next": "14.1.0",
+    "openai": "^4.27.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
+    "slugify": "^1.6.6",
+    "stripe": "^14.16.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "unique-username-generator": "^1.3.0",
+    "uploadthing": "^6.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "prisma": "^5.9.1",
+    "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
